--- a/.github/workflows/postman-api-tests.yml
+++ b/.github/workflows/postman-api-tests.yml
@@ -30,7 +30,7 @@ jobs:
         run: "npm install -g newman-reporter-htmlextra"
       - 
         name: "Make Directory for results"
-        run: "mkdir -p postmanResults"
+        run: "mkdir -p Postman_Results"
       - 
         name: "Run tests"
-        run: "newman run Veed.postman_collection.json -r htmlextra --reporter-htmlextra-export postmanResults/htmlreport.html --reporter-htmlextra-darkTheme  > postmanResults/runreport1.html"
+        run: "newman run Veed.postman_collection.json -e Staging.postman_environment.json  -r htmlextra --reporter-htmlextra-export Postman_Results/htmlreport.html --reporter-htmlextra-darkTheme  > Postman_Results/runreport1.html"
