--- a/.github/workflows/postman-api-tests.yml
+++ b/.github/workflows/postman-api-tests.yml
@@ -35,8 +35,11 @@ jobs:
         name: "Run tests"
         run: "newman run Veed.postman_collection.json -e Staging.postman_environment.json  -r htmlextra --reporter-htmlextra-export Postman_Results/htmlreport.html --reporter-htmlextra-darkTheme  > Postman_Results/runreport1.html"
       
-      - name: Send GitHub Action trigger data to Slack workflow
-        id: slack
-        uses: slackapi/slack-github-action@v1.21.0
-        env:
-        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+      - name: Publish report
+        uses: MeilCli/slack-upload-file@v1
+        with:
+          slack_token: ${{ secrets.SLACK_TOKEN }}
+          file_path: './tests/htmlreport.html'
+          file_name: 'htmlreport.html'
+          file_type: 'html'
+          channels: 'general'
