--- a/.github/workflows/postman-api-tests.yml
+++ b/.github/workflows/postman-api-tests.yml
@@ -36,7 +36,7 @@ jobs:
         uses: MeilCli/slack-upload-file@v1
         with:
           slack_token: ${{ secrets.SLACK_TOKEN }}
-          file_path: './tests/htmlreport.html'
-          file_name: 'htmlreport.html'
+          file_path: './htmlreport.html'
+          file_name: 'postmanReport.html'
           file_type: 'html'
           channels: 'general'
