--- a/.github/workflows/postman-api-tests.yml
+++ b/.github/workflows/postman-api-tests.yml
@@ -24,7 +24,7 @@ jobs:
         run: "npm install -g newman-reporter-htmlextra"
       - 
         name: "Run tests"
-        run: "newman run my.postman_collection.json -e Staging.postman_environment.json  -r htmlextra --reporter-htmlextra-export htmlreport.html --reporter-htmlextra-darkTheme  > runreport1.html"
+        run: "newman run Newman\ Demo.postman_collection.json -e ReqRes\ Dev.postman_environment.json  -r htmlextra --reporter-htmlextra-export htmlreport.html --reporter-htmlextra-darkTheme  > runreport1.html"
       
       - name: Publish report
         uses: MeilCli/slack-upload-file@v1
