--- a/.github/workflows/postman-api-tests.yml
+++ b/.github/workflows/postman-api-tests.yml
@@ -24,7 +24,8 @@ jobs:
         run: "npm install -g newman-reporter-htmlextra"
       - 
         name: "Run tests"
-        run: "newman run NewmanDemo.postman_collection.json -e ReqResDev.postman_environment.json  -r htmlextra --reporter-htmlextra-export htmlreport.html --reporter-htmlextra-darkTheme  > runreport1.html"
+        run: "newman run NewmanDemo.postman_collection.json -e ReqResDev.postman_environment.json  
+        -r htmlextra --reporter-htmlextra-export htmlreport.html --reporter-htmlextra-darkTheme  > runreport1.html"
       
       - name: Publish report
         uses: MeilCli/slack-upload-file@v1
@@ -33,4 +34,4 @@ jobs:
           file_path: './tests/htmlreport.html'
           file_name: 'postmanReport.html'
           file_type: 'html'
-          channels: 'general'
+          channels: 'api-test-reports'
